SFDCProject/src/objects/SampleObject1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SampleObject1</label>
    <nameField>
        <label>SampleObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SampleObjects1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>